checkers: migrate all to typed HIR; add TypedPackageableRef; narrow TypedFrom/TypedEval field types
- All 9 remaining checkers (Aggregate, GroupBy, Pivot, Project, Join, AsOfJoin, Eval, GraphFetch, Extend) now produce TypedSpec variants instead of TypeInfo.
- ExtendChecker: full typed shape with sealed TypedExtendCol (scalar / window / traverse), TypedExtend.traversalHops; pattern-matches TypedNativeCall for native-function resolution and TypedTableReference for the traverse target.
- TraversalHop filled in (tableName + typed condition lambda).
- New TypedPackageableRef variant for FQN references at expression position (runtime, store, class, enum, function); permits entry on TypedSpec.
- TypedFrom.mapping / TypedFrom.runtime narrowed from TypedSpec to TypedPackageableRef (always FQN refs); FromChecker enforces with a loud pattern-match + tightens its check(..) return type to TypedFrom.
- TypedEval.applicable narrowed to TypedVariable (only emitted by EvalChecker for the function-typed-variable branch).

Build remains broken at TypeChecker / PlanGenerator / MappingResolver as planned; checker layer itself compiles standalone.